--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <guava.version>15.0</guava.version>
         <protobuf.version>3.5.0</protobuf.version>
         <spark.version>2.2.0</spark.version>
-        <spark.scope>provided</spark.scope>
         <jpmml.spark.version>1.3.2</jpmml.spark.version>
         <jpmml.sklearn.version>1.4.1</jpmml.sklearn.version>
         <jpmml.xgboost.version>1.2.4</jpmml.xgboost.version>
@@ -447,48 +446,7 @@
                 </executions>
             </plugin>
 
-            <!--Use maven shade plugin to include dependencies, we can run scala code by java-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-shade-plugin</artifactId>-->
-                <!--<version>2.3</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>shade</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<minimizeJar>false</minimizeJar>-->
-                            <!--<dependencyReducedPomLocation>-->
-                                <!--${project.build.directory}/dependency-reduced-pom.xml-->
-                            <!--</dependencyReducedPomLocation>-->
-                            <!--<filters>-->
-                                <!--<filter>-->
-                                    <!--<artifact>*:*</artifact>-->
-                                    <!--<excludes>-->
-                                        <!--<exclude>log4j.properties</exclude>-->
-                                        <!--<exclude>META-INF/*.SF</exclude>-->
-                                        <!--<exclude>META-INF/*.DSA</exclude>-->
-                                        <!--<exclude>META-INF/*.RSA</exclude>-->
-                                        <!--<exclude>META-INF/LICENSE*</exclude>-->
-                                        <!--<exclude>license/*</exclude>-->
-                                    <!--</excludes>-->
-                                <!--</filter>-->
-                            <!--</filters>-->
-                            <!--<artifactSet>-->
-                                <!--<excludes>-->
-                                    <!--<exclude>org.tensorflow:*s</exclude>-->
-                                <!--</excludes>-->
-                            <!--</artifactSet>-->
-                            <!--<transformers>-->
-                                <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">-->
-                                <!--</transformer>-->
-                            <!--</transformers>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <!--copy compiled ppmml jar to python/ppmml/resources-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
