--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -20,7 +20,9 @@
         <jpmml.xgboost.version>1.2.4</jpmml.xgboost.version>
         <jpmml.lightgbm.version>1.1.3</jpmml.lightgbm.version>
         <jpmml.converter.version>1.2.6</jpmml.converter.version>
-        <jpmml.converter.spark.version>1.2.5</jpmml.converter.spark.version>
+        <jpmml.model.version>1.3.8</jpmml.model.version>
+        <jpmml.model.metro.version>1.3.8</jpmml.model.metro.version>
+        <jpmml.evaluator.version>1.3.10</jpmml.evaluator.version>
         <guava.version>20.0</guava.version>
         <hadoop.version>2.7.3</hadoop.version>
         <slf4j.version>1.7.16</slf4j.version>
@@ -58,7 +60,7 @@
             <version>${protobuf.version}</version>
         </dependency>
 
-        <!--pmml dependencies-->
+        <!--jpmml dependencies-->
         <dependency>
             <groupId>org.jpmml</groupId>
             <artifactId>jpmml-converter</artifactId>
@@ -83,29 +85,20 @@
             </exclusions>
         </dependency>
 
-        <!--jpmml-spark needs this version-->
         <dependency>
             <groupId>org.jpmml</groupId>
-            <artifactId>jpmml-converter</artifactId>
-            <version>${jpmml.converter.spark.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.sun.xml.fastinfoset</groupId>
-                    <artifactId>FastInfoset</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.glassfish.jaxb</groupId>
-                    <artifactId>txw2</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jvnet.staxex</groupId>
-                    <artifactId>stax-ex</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>pmml-model</artifactId>
+            <version>${jpmml.model.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-model-metro</artifactId>
+            <version>${jpmml.model.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-model-moxy</artifactId>
+            <version>${jpmml.model.version}</version>
         </dependency>
 
         <dependency>
@@ -162,6 +155,28 @@
                     <artifactId>protobuf-java</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!--for pmml file evaluate and predict-->
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-model-metro</artifactId>
+            <version>${jpmml.model.metro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-evaluator</artifactId>
+            <version>${jpmml.evaluator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-evaluator-extension</artifactId>
+            <version>${jpmml.evaluator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-evaluator-test</artifactId>
+            <version>${jpmml.evaluator.version}</version>
         </dependency>
 
         <!--spark dependencies-->
@@ -471,16 +486,4 @@
             </plugin>
         </plugins>
     </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <configuration>
-                    <scalaVersion>${scala.version}</scalaVersion>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-
 </project>
